--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource/cormorant-garamond": "^5.0.8",
+    "@fontsource/ubuntu": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
