Add mocks and handlers to test RobotsSlice component

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "husky": "^8.0.0",
     "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
+    "msw": "^1.2.4",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2",
